--- a/client/rameses-gov-lgu/nbproject/project.properties
+++ b/client/rameses-gov-lgu/nbproject/project.properties
@@ -36,8 +36,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.osiris3-client-libs.classpath}:\
-    ${reference.rameses-enterprise.jar}:\
-    ${reference.rameses-enterprise-admin.jar}
+    ${libs.modules-enterprise-libs.classpath}:\
+    ${libs.modules-admin-libs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,10 +74,6 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 no.dependencies=true
 platform.active=Java_1.6
-project.rameses-enterprise=../../rameses-enterprise
-project.rameses-enterprise-admin=../../rameses-enterprise-admin
-reference.rameses-enterprise-admin.jar=${project.rameses-enterprise-admin}/dist/rameses-enterprise-admin.jar
-reference.rameses-enterprise.jar=${project.rameses-enterprise}/dist/rameses-enterprise.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
