--- a/client/rameses-etracs-main/nbproject/project.properties
+++ b/client/rameses-etracs-main/nbproject/project.properties
@@ -30,9 +30,9 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.osiris3-client-libs.classpath}:\
     ${libs.swing-layout.classpath}:\
-    ${reference.rameses-enterprise.jar}
+    ${libs.osiris3-client-libs.classpath}:\
+    ${libs.modules-enterprise-libs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,8 +71,6 @@ mkdist.disabled=true
 platform.active=Java_1.6
 no.dependencies=true
 
-project.rameses-enterprise=../../rameses-enterprise
-reference.rameses-enterprise.jar=${project.rameses-enterprise}/dist/rameses-enterprise.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
