--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ Thumbs.db
 /client/rameses-gov-etracs-tools/dist/
 /client/rameses-gov-lgu/build/
 /client/rameses-gov-lgu/dist/
+/client/rameses-gov-etracs-v255-bridge/build/
+/client/rameses-gov-etracs-v255-bridge/dist/
