--- a/client/rameses-gov-etracs-v255-bridge/nbproject/project.properties
+++ b/client/rameses-gov-etracs-v255-bridge/nbproject/project.properties
@@ -27,16 +27,12 @@ dist.jar=${dist.dir}/rameses-gov-etracs-v255-bridge.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.rameses-enterprise-treasury.jar=C:\\docker\\nginx\\static\\downloads\\modules\\shared\\rameses-enterprise-treasury.jar
-file.reference.rameses-gov-treasury.jar=C:\\docker\\nginx\\static\\downloads\\modules\\rameses-gov-treasury.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.osiris3-client-libs.classpath}:\
-    ${file.reference.rameses-gov-treasury.jar}:\
-    ${file.reference.rameses-enterprise-treasury.jar}
+    ${libs.osiris3-client-libs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,6 +67,7 @@ jnlp.signing.alias=
 jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
+no.dependencies=true
 platform.active=Java_1.7
 run.classpath=\
     ${javac.classpath}:\
