--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Thumbs.db
 /client/rameses-gov-lgu/dist/
 /client/rameses-gov-etracs-v255-bridge/build/
 /client/rameses-gov-etracs-v255-bridge/dist/
+/client/rameses-gov-etracs-v255-bridge/nbproject/private/
